@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/python-exec/python-exec-2.9999.ebuild,v 1.2 2013/10/03 21:07:20 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/python-exec/python-exec-2.9999.ebuild,v 1.3 2013/10/07 02:56:18 mgorny Exp $
 
 EAPI=5
 
@@ -68,6 +68,9 @@ cleanup_vardb_deps() {
 		sed -i -e 's,dev-python/python-exec\[,dev-python/python-exec:0[,' \
 			"${files[@]}"
 		eend ${?}
+
+		# touch packages, categories and vardb. suggested by Arfrever.
+		touch "${files[@]%/*}" "${files[@]%/*/*}" "${EROOT%/}"/var/db/pkg
 	fi
 }
 
