@@ -8,6 +8,7 @@ DIST youtube-dl-2013.09.29.tar.gz 1025973 SHA256 07eac71230aeff01b4513f695ff1b5a
 DIST youtube-dl-2013.10.01.1.tar.gz 1192773 SHA256 1570bab654b23f3617eccfda30a63257c729353e027cd6228ac9ccc7256602ab SHA512 477539d90ad3af4d61b38d5396d92bddbca59667c06c558208ab5a0c372323ebc066e6ec2856c383fe34adf640ea1f6baecbd1b2d1e851f426461b7115504c2a WHIRLPOOL 7e6dcbc3e2976fbd864ef22bf1dc8b8942a2f7b04244c52b75837d4c31425e7fa6186276bed0617cd49b6f925202779f11eabbff397180379d186b1db8aa1b98
 DIST youtube-dl-2013.10.01.tar.gz 1025364 SHA256 e5ffccf77724a6e81a82c0b94c49ffc06915469ef0799ef890ecaf5c3fe1a12d SHA512 aa95d60626aab0168c9f852b74609e3ff4cbd7f7edb30f5429219285ee720d85936fa674d66af72db2781a712b5381254fcd4d62f2979515bc765145f4c105ce WHIRLPOOL 535e654e0021ed0d6b84652ae2f7250c5348743e7d9e236894774af3727ca7d811daf8c9111892b686dee43ea24d590c8b7c524a16d48c7d29320e68a5967c3b
 DIST youtube-dl-2013.10.04.tar.gz 1195209 SHA256 9a39a5cce59fa457ec7925c4a165c51e38be179437bd26f33735015b5e4a8f03 SHA512 8cd28bb7edd65efeabd6b32ea1b915e2474f503412d63ea34080a8c9fface18ca5bbb6cdcb38df5d5c54b574719429360c9d842a2112b06f9708dafdf5a426e4 WHIRLPOOL eddb2ed1060aadbe65ae1345a93dfdccf7a0859f83641736b0943ffecc1927f0662884e37993d07d8cced3851bac34a2ed556bfe27cd805cd7ab499a32f763e1
+DIST youtube-dl-2013.10.06.tar.gz 1198041 SHA256 5d6882e200292b40d20cab3b1003efe72d0ab1622d29c09b281a47b9fda6de19 SHA512 19f48979b004484c2fb8ee065cc970ca6ea090b835e082b1fa24f2d1d6b60537915971100fd0e779e08b73e8b252a366a0894dba05a57ba56fbc60542a290097 WHIRLPOOL 9070d3bb42d76d1a371a5babeaeeee492cf8dd64ee4f4ab85cd43f8b15c090f552635c0754061ca3678468aeee7993c52f47412381ef432c8389da04da65827c
 EBUILD youtube-dl-2013.08.02.ebuild 1337 SHA256 824645e6257b3ca5c5637b8ee52a925324cb9917e61c67864223ec3df15ca159 SHA512 5b144559df9d1d08ff98ca0ef8e7549a9e3d2d1b8d4fae56a840078543d110b2f90a8197dcfa4cac6dc2f7319ea32d7687631420392f8a0d94d03307305379d0 WHIRLPOOL c7508da653d0b905136b5b072ad78a637de66e2ffbc16028d46f5601b7a15adefc826d6fe3446933f74a4350080ed6a199dd9ebf82f816f4f5bc2555ec2561eb
 EBUILD youtube-dl-2013.09.20.1.ebuild 1344 SHA256 0f0df7fbf79559e8f56d0909d8a5b3c76f06870a1d463424fc43d615e6e36dc6 SHA512 dc49b6990f45536ef65139e83feeeec7b9d34f9ea5871029026d6e0ee64c8de7fb5b26c26a89a54234057e417683e8a3ecfbda9f1c72d9a905859771633c3bf1 WHIRLPOOL 833d20d810181349c05ab40369c51d79291e51e82630fad321b9d326791b0bb66f7c881b69d85483b9605594c5c7af5590696b7fc11c8dd302ea0f9db597945e
 EBUILD youtube-dl-2013.09.24.2.ebuild 1344 SHA256 0dc0c7ab298ebd57e706609af9e369dca8a24781a8da1e2278ddba61248e8877 SHA512 8ba4c38da0e9d8fa9a9b646f59f06e24c3273ff1f8312401dad944b4b517469672a377003341b0782e87f5cd541283267f36503bede8734e28b24cd3feca8667 WHIRLPOOL b124d4fc590c9ba2bbff6f6e2b5d7ce050cd10ca3a7840856995ca2bede82331cb86a00b52e6581d7bb3114d2293aa3c30de9690dfee985e2b6bb7d12fb58dc4
@@ -15,12 +16,13 @@ EBUILD youtube-dl-2013.09.29.ebuild 1342 SHA256 7382a41fc7614d6b5e396b6af1fa439d
 EBUILD youtube-dl-2013.10.01.1.ebuild 1344 SHA256 6dda0740bb6319ae259b0f672fd12853a4be33c6f67a0fa911d9b1af859d1ce5 SHA512 e112e8959ba254c0b7fff072782a062e5d61eff1cabe3343a981388db34dacb9fffa65a092d4be991ad98c22c59b43b07739588d55dd925b3d3d289ed81a2949 WHIRLPOOL a22d48c64d544534e70f58896c4e1024ca79497de4a963b7a3e0958f2c86e4677830c704f335f4f737bc79d9a3c0f3adb715a42496aa163f257ff60a7a39bf09
 EBUILD youtube-dl-2013.10.01.ebuild 1342 SHA256 dc0b56c7aa213465571a22b6be5991f78c0a9efd6897137676b81494031cc2bb SHA512 851664576062e2c704967bfe8ae6c7c2ec7f5a1f5807797b260d2ef94db154bdc995490cfaf2fe1b66867e8799e042b671f84351ff49a4b0dcfef0af7e25232b WHIRLPOOL 299bde4065441d6cf8705fb6e25d641b738dea2bfd2206aac93e2c7c3a885b6891a817cff8e3c1909cb38a955ebe1ebcbd8f303e3cbe6ab26bb0f61466cc42f1
 EBUILD youtube-dl-2013.10.04.ebuild 1342 SHA256 36479353efa02002f2c525cb24167dd8740a86d391104d70d9db7b2e7973f487 SHA512 fc412b5eb6e733f872dd7a96059c13d0e5ff9de584abbe097f5e4e4dc018cc6c726471b65099926a4e3443a0038e3d2ff88c592d89a4800e91d58115a2c72ceb WHIRLPOOL b89faa419b7611717324dfaa24b5fb83ac097c5ee2569e3c72b5b168d19fada5b4aab0eaa79a8a77239c82587de89103e58950f87c737f2663f2c0945ffe91e1
-MISC ChangeLog 33693 SHA256 e45d88fee7d92783df5637a717ed192f6c9db60915b6c440926d7f623ac93095 SHA512 b383e81b4121646a963ff47ab272eb9892a04c2e2e8ad6533510d3f76aaf023e664f9db58e1c1df6ad4e3dc972878a3971483c782c85cb8350d2df16646aa67f WHIRLPOOL 0d2f5ae33aef4b6561f9dad8f79ebd8a52b25b8c50fc48e088b273d0b863ca5571433ada9aeb7160154f947d76feb470599e58f677f5a0b4ae65da9859e7a3c7
+EBUILD youtube-dl-2013.10.06.ebuild 1342 SHA256 ed55c2d9c03892e4a89fe355c3b2dbfa014219b95ba2fb1ad18a14f0563bdd5a SHA512 77fd6f70f6370db18daec059ea4e00eb1c0cd7971ac26f7bcd032ee8e064ee4b45545a8dcc0ee923f2252109a646eaf9430632756f27fc259250d7da7a9bd784 WHIRLPOOL 28852eb92581e8fff6d973f9e8b69d459169c7347ef69e4b5e5ab8143bca57bac8204ac1b66c191ab1af659945d0d70e6815e92bf1a69c7576ea8775f02a27d5
+MISC ChangeLog 33826 SHA256 1cdc12700fdb9022c8e2b38aa2876796f373076a836eb6ef3324030809bba870 SHA512 fb8a5941b639bc4b357b31ddd8ff549ff762c017036cab36c7aa35bb3903e7dd658cef1d97e19f446ea514e15e3f779379d96e6706b80bc2623ca3848ba98ff8 WHIRLPOOL fd71e708a01ef08e1b335c8a7afb5a196ff9d86fb7066b25c8f0d2b61911d266c0977b8899cff53c2eca686215391a922b906216bbad1e5f93f77c0bc11db430
 MISC metadata.xml 274 SHA256 2b4f14b46d21b004377e745db520f7961bc4163b23e6f3d8bbcab508272b1f69 SHA512 acfb3695928ebf2ee87c75f06c7ab47a65f4aa8564b1426ee523a1a5c853ed56df0de4cba186ac003383a27dfa9d21e4f4ff44b48e152c406a918f1b01ca358b WHIRLPOOL 0f245af71a769b0d4eb9bb57a99599a0875ad0373a830ff9e8215a077d3d2f02e916b7b25d275b19b5139810608abddfada68d3d0f2e9191351d26ba716b623b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlJOzBcACgkQVWmRsqeSphOVYACdGp0SagnD8r+3fRwudhM7pv3z
-/JsAn1BKyWo8YT6Ge4JsPQXxbk8YkzXk
-=ZMZY
+iEYEAREIAAYFAlJSHrwACgkQVWmRsqeSphMKvQCdH2WU0gi8OGDhIu6FrFOlBdFo
+hHYAmQFwy/ZDkWop4auOUGMtW2yvLZD8
+=l8gi
 -----END PGP SIGNATURE-----
