@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/youtube-dl
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/youtube-dl/ChangeLog,v 1.234 2013/10/04 14:09:26 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/youtube-dl/ChangeLog,v 1.235 2013/10/07 02:38:51 jer Exp $
+
+*youtube-dl-2013.10.06 (07 Oct 2013)
+
+  07 Oct 2013; Jeroen Roovers <jer@gentoo.org> +youtube-dl-2013.10.06.ebuild:
+  Version bump.
 
 *youtube-dl-2013.10.04 (04 Oct 2013)
 
