@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/python-exec
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/python-exec/ChangeLog,v 1.53 2013/10/03 21:07:20 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/python-exec/ChangeLog,v 1.54 2013/10/07 02:56:18 mgorny Exp $
+
+  07 Oct 2013; Michał Górny <mgorny@gentoo.org> python-exec-2.0-r1.ebuild,
+  python-exec-2.9999.ebuild:
+  Touch vardb after modifications as suggested by Arfrever.
 
 *python-exec-2.0-r1 (03 Oct 2013)
 
